Tests/CompilerTests/negative/invalid-return.hylo
//! no-std

struct A {}

fun f0() {
  A()
}

fun f1() {
  return A()
}

fun f2() -> A {
  return
}
